Fix tip on dark mode

--- a/style.css
+++ b/style.css
@@ -1705,6 +1705,10 @@ video {
   top: 1.5rem;
 }
 
+.isolate {
+  isolation: isolate;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1838,8 +1842,16 @@ video {
   display: table;
 }
 
+.flow-root {
+  display: flow-root;
+}
+
 .grid {
   display: grid;
+}
+
+.contents {
+  display: contents;
 }
 
 .hidden {
@@ -1891,6 +1903,11 @@ video {
   width: min-content;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1912,6 +1929,10 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.resize {
+  resize: both;
 }
 
 .list-disc {
@@ -1956,6 +1977,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-r-full {
@@ -2152,6 +2177,10 @@ video {
   text-align: right;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .font-Calistoga {
   font-family: Calistoga, sans-serif;
 }
@@ -2284,6 +2313,14 @@ video {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline {
+  outline-style: solid;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
@@ -2494,6 +2531,18 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+:is(.dark .dark\:bg-gray-700\/50) {
+  background-color: rgb(55 65 81 / 0.5);
+}
+
+:is(.dark .dark\:bg-gray-700\/20) {
+  background-color: rgb(55 65 81 / 0.2);
+}
+
+:is(.dark .dark\:bg-gray-700\/80) {
+  background-color: rgb(55 65 81 / 0.8);
+}
+
 :is(.dark .dark\:from-emerald-500) {
   --tw-gradient-from: #10b981 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(16 185 129 / 0) var(--tw-gradient-to-position);
@@ -2574,6 +2623,11 @@ video {
 :is(.dark .dark\:hover\:text-gray-700:hover) {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:hover\:text-gray-600:hover) {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:active\:border-transparent:active) {
@@ -2734,6 +2788,26 @@ video {
   :is(.dark .md\:dark\:bg-gray-900) {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
+
+  :is(.dark .dark\:md\:bg-gray-700\/80) {
+    background-color: rgb(55 65 81 / 0.8);
+  }
+
+  :is(.dark .dark\:md\:bg-gray-700\/20) {
+    background-color: rgb(55 65 81 / 0.2);
+  }
+
+  :is(.dark .dark\:md\:bg-gray-700\/50) {
+    background-color: rgb(55 65 81 / 0.5);
+  }
+
+  :is(.dark .dark\:md\:bg-gray-700\/40) {
+    background-color: rgb(55 65 81 / 0.4);
+  }
+
+  :is(.dark .dark\:md\:bg-gray-700\/60) {
+    background-color: rgb(55 65 81 / 0.6);
   }
 }
 
